--- a/package.json
+++ b/package.json
@@ -4,19 +4,25 @@
   "description": "",
   "main": "server.js",
   "scripts": {
+    "dev": "babel-node src/index.js",
     "devStart": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-server-express": "^1.3.2",
     "casual": "^1.6.2",
     "express": "^4.17.1",
-    "express-graphql": "^0.9.0",
     "graphql": "^15.0.0",
     "graphql-iso-date": "^3.6.1",
-    "graphql-tools": "^5.0.0"
+    "graphql-tools": "^5.0.0",
+    "mongoose": "^5.9.25",
+    "mongoose-extend-schema": "^1.0.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
     "nodemon": "^2.0.3"
   }
 }
