--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server-express": "^1.3.2",
+    "bcryptjs": "^2.4.3",
     "casual": "^1.6.2",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "graphql": "^15.0.0",
     "graphql-iso-date": "^3.6.1",
