--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server-express": "^1.3.2",
     "bcryptjs": "^2.4.3",
     "casual": "^1.6.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-graphql": "^0.11.0",
     "graphql": "^15.0.0",
     "graphql-iso-date": "^3.6.1",
     "graphql-tools": "^5.0.0",
@@ -24,6 +24,7 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "nodemon": "^2.0.3"
   }
