--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "graphql": "^15.0.0",
     "graphql-iso-date": "^3.6.1",
     "graphql-tools": "^5.0.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.25",
     "mongoose-extend-schema": "^1.0.0"
   },
