--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tfg-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "src/index.js",
   "scripts": {
     "dev": "babel-node src/index.js",
     "devStart": "nodemon server.js"
