--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@googlemaps/google-maps-services-js": "^3.1.4",
     "bcryptjs": "^2.4.3",
     "casual": "^1.6.2",
     "dotenv": "^8.2.0",
