--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "express-graphql": "^0.11.0",
     "graphql": "^15.0.0",
     "graphql-iso-date": "^3.6.1",
+    "graphql-server-express": "^1.4.1",
+    "graphql-subscriptions": "^1.1.0",
     "graphql-tools": "^5.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.25",
-    "mongoose-extend-schema": "^1.0.0"
+    "mongoose-extend-schema": "^1.0.0",
+    "subscriptions-transport-ws": "^0.9.17"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
