--- a/package.json
+++ b/package.json
@@ -11,20 +11,16 @@
   "license": "ISC",
   "dependencies": {
     "@googlemaps/google-maps-services-js": "^3.1.4",
+    "apollo-server": "^2.16.1",
+    "apollo-server-express": "^2.16.1",
     "bcryptjs": "^2.4.3",
     "casual": "^1.6.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-graphql": "^0.11.0",
-    "graphql": "^15.0.0",
     "graphql-iso-date": "^3.6.1",
-    "graphql-server-express": "^1.4.1",
-    "graphql-subscriptions": "^1.1.0",
-    "graphql-tools": "^5.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.25",
-    "mongoose-extend-schema": "^1.0.0",
-    "subscriptions-transport-ws": "^0.9.17"
+    "mongoose-extend-schema": "^1.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
