--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "apollo-server-express": "^2.16.1",
     "bcryptjs": "^2.4.3",
     "casual": "^1.6.2",
+    "cloudinary": "^1.22.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "graphql": "^15.3.0",
